# robert

./: .gitignore  CLAUDE.md  DIFFICULTIES.md  README.md  SWIFT_REWRITE_SPEC.md  copilot.html  index.html  overlay.html  package-lock.json  package.json  settings.html  vite.config.ts
src/: copilot.tsx  main.tsx  overlay.tsx  settings.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: handlers.rs  lib.rs  macos_tracking.rs  main.rs  state.rs
src-tauri/src/audio/: capture.rs  mod.rs
src-tauri/src/llm/: anthropic.rs  mod.rs
src-tauri/src/mcp/: manager.rs  mod.rs
src-tauri/src/storage/: database.rs  mod.rs  models.rs
src-tauri/src/tools/: definitions.rs  executor.rs  mod.rs  provider.rs
src-tauri/src/transcription/: mod.rs  streaming.rs  whisper.rs
